# opticalmc-slab-transport

./: .gitignore  CMakeLists.txt  README.md  iad_results_g0_effective.csv  iad_results_g0_full.csv  make_macro_zns_sources.py  optical_properties.example.csv  plot_thickness_light.py  run.py  run_config.example.json  run_opticalmc_batch.py
analysis/: README.md  collect_mc_results.py  common.py  plot_mc_results.py  plot_ratio_comparison.py  run_analysis.py
inputs/511/: Glass-R-D.txt  Glass-T-D.txt  X-X-100-R-D.txt  X-X-100-T-D.txt  X-X-110-R-D.txt  X-X-110-T-D.txt  X-X-140-R-D.txt  X-X-140-T-D.txt  X-X-170-R-D.txt  X-X-170-T-D.txt  X-X-30-R-D.txt  X-X-30-T-D.txt  X-X-70-R-D.txt  X-X-70-T-D.txt
inputs/iad_inputs/511/: README.md  manifest.json  measurements.csv  samples.csv
inputs/iad_inputs/511/per_sample/: X-X-100_iad_input.csv  X-X-110_iad_input.csv  X-X-140_iad_input.csv  X-X-170_iad_input.csv  X-X-30_iad_input.csv  X-X-70_iad_input.csv
inputs/optical_params/1-1/: monte_carlo_recommended_inputs.csv  monte_carlo_recommended_inputs.json  phase_function_mean_by_ratio.csv  rve_raw_optical_params_by_ratio.csv
inputs/optical_params/1-3/: monte_carlo_recommended_inputs.csv  monte_carlo_recommended_inputs.json  phase_function_mean_by_ratio.csv  rve_raw_optical_params_by_ratio.csv
mask_imaging/: README.md  run_mask_imaging.py
src/: OpticalMC.cpp
tools/: README_IAD.md  compare_transport_profiles.py  iad_glass_batch.example.csv  make_iad_transport_profile.py  prepare_iad_inputs.py  run_iad.py  run_iad_glass_batch.py
(+1 files in other folders)
